<resources>
    <string name="app_name">FoodOdering</string>
    <string name="name_app">Wases Of Food</string>
    <string name="deliever_favourite_food">Deliever Favourite Food</string>
    <string name="design_ducfore">Design by\n DucFore</string>
    <string name="name_restaurant">Minh Duc\'s Restaurant</string>
    <string name="btn_start">Next</string>
    <string name="todo">TODO</string>
    <string name="login_account">Login To Your Account</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="continue_with">Continue with</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t Have Account</string>
    <string name="sign_up">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favourite_food">Explore Your Favourite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="_5">5$</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="food_name">Food Name</string>
    <string name="cart_01">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="food_name_cart">food name cart</string>
    <string name="price_food_cart">price food cart</string>
    <string name="_1">1</string>
    <string name="menu_name">menu_name</string>
    <string name="view_menu">View Menu</string>
    <string name="popular">Popular</string>
    <string name="menu">Menu</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="foodname">FoodName</string>
    <string name="notification">Notification</string>
    <string name="save_information">Save Information</string>
    <string name="text_address">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual</string>
    <string name="text_email">nduc@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="text_phone">123456789</string>
    <string name="address">Address</string>
    <string name="text_name">Neymar</string>
    <string name="edit">Edit</string>
    <string name="place_my_order">PLACE MY ORDER</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="payment_method">Payment Method</string>
    <string name="congrats_nyour_oder_placed">Congrats \nYour Oder Placed</string>
    <string name="add_to_chart">Add to Chart</string>
    <string name="ingredients">Ingredients</string>
    <string name="description_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="short_decscription">Short decscription</string>
</resources>